--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -1,3 +1,4 @@
+@import '@/styles/mixins.scss';
 @import '@/styles/variables.scss';
 
 .d-flex {
@@ -17,6 +18,16 @@
   @extend .flex-column;
   @extend .justify-center;
   @extend .align-center;
+}
+
+@include marginAndPaddingSizes();
+
+.raised {
+  box-shadow: 0 2px 4px -1px #0003, 0 4px 5px #00000024, 0 1px 10px #0000001f;
+}
+
+.rounded {
+  border-radius: 8px;
 }
 
 .size-100-percent {
