--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,5 +11,11 @@ body {
 
   font-family: Arial, Helvetica, sans-serif;
   background: $global-white;
+  color: $global-dark;
   margin: 0;
+}
+
+#app {
+  @extend .flex-center-column;
+  @extend .size-100-percent;
 }
